<resources>
    <string name="app_name">İlaç Takip Sistemi</string>
    <string name="ecza_dolabi">Ecza Dolabı</string>
    <string name="ecza_dolabim">Ecza Dolabım</string>
    <string name="kisiler">Kişiler</string>
    <string name="ilac_sorgulama">İlaç Sorgulama</string>
    <string name="ilac_ismi">İlaç İsmi:</string>
    <string name="ilac_skt">İlaç SKT:</string>
    <string name="ilac_fiyat">İlaç Fiyat:</string>
    <string name="detay_gormek_icin_ilac_sec">Detayları görmek için listeden ilaç seçiniz...</string>
    <string name="yeni_ilac_ekle">Yeni İlaç Ekle</string>
    <string name="search_drug">İlaç Arama</string>
    <string name="search_result">Arama Sonucu</string>
    <string name="gelistiriciler">Geliştiriciler</string>
    <string name="ilac_ismi_bekleniyor">İlaç ismi bekleniyor...</string>
    <string name="ilac_fiyat_bekleniyor">İlaç fiyatı bekleniyor...</string>
    <string name="ilac_skt_bekleniyor">İlaç SKT bekleniyor...</string>
    <string name="ksc_software_team">KSC Software Team</string>
    <string name="bugra_kaan_demirdover">Buğra Kaan Demirdöver</string>
    <string name="burak_akar">Burak Akar</string>
    <string name="kadir_berkay_aydemir">Kadir Berkay Aydemir</string>
    <string name="kadir_cenk_alpay">Kadir Cenk Alpay</string>
    <string name="mustafa_agriman">Mustafa Ağrıman</string>
    <string name="onur_henden">Onur Henden</string>
    <string name="mustafa_cil">Mustafa Çil\'e Teşekkürler</string>
    <string name="idea_dad">Ve</string>
    <string name="kesici_pop_up">Kesiciler!</string>
    <string name="yapim_asamasinda">Yapım aşamasında!</string>
    <string name="no_internet">İnternete bağlı değilsiniz!</string>
    <string name="surprise">xDxDxD</string>
    <string name="db_name">DrugTraceSystem</string>
    <string name="create_table_query">CREATE TABLE IF NOT EXISTS Users(id INTEGER PRIMARY KEY AUTOINCREMENT,user VARCHAR,ilac_ismi VARCHAR,ilac_skt VARCHAR,ilac_fiyat VARCHAR);</string>
    <string name="insert_header">INSERT INTO Users(user,ilac_ismi,ilac_skt,ilac_fiyat) VALUES</string>
    <string name="last_row_id_select">select seq from sqlite_sequence where name=\'Users\'</string>
    <string name="sadece_karekod_okutunuz">Hata! Lütfen sadece Karekod okutunuz.</string>
    <string name="kaydet">Kaydet</string>
    <string name="siyah_qr_code">Siyah zemin QR Code</string>
    <string name="kisi_kaydedildi">Kişi kaydedildi</string>
    <string name="ilac_check_namespace">http://its.titck.gov.tr/net/check/productstatus/</string>
    <string name="ilac_check_url">http://its.saglik.gov.tr/ControlProduct/CheckProductStatusService</string>
    <string name="ilac_check_soapaction">http://its.titck.gov.tr/net/check/productstatus/CheckProductStatusRequest</string>
    <string name="ilac_check_methodname">CheckProductStatusRequest</string>
    <string name="kisi_ekle">Kişi Ekle</string>
    <string name="ad">Ad</string>
    <string name="soyad">Soyad</string>
    <string name="cinsiyet">Cinsiyet</string>

</resources>
